# Iris-Classification-System-MLOps

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  Version History.md  create_structure.bat  pyproject.toml  vercel.json
.github/workflows/: automated-retraining.yml  backend-cd.yml  backend-ci.yml  docker-publish.yml
data/monitoring/: new_data.csv
deployment/: Dockerfile  docker-compose.yml  render.yaml
docs/: Data Sources.md  Deployment & Infrastructure.md  Directory Structure.md  Implementation Plan & Roadmap.md  Success Criteria.md  System Design Decisions.md  Technology Stack.md
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DriftMonitor.jsx  DriftVisualization.jsx  ErrorMessage.jsx  FeatureContributionChart.jsx  FeatureInput.jsx  FlowerVisualization.jsx  Header.jsx  MLOpsDashboard.jsx  ModelPerformanceDashboard.jsx  ModelVersionTimeline.jsx  PredictionForm.jsx  PredictionHistory.jsx  (+4 more)
models/: iris_classifier.joblib  model_registry.json
scripts/: evaluate_model.py  generate_iris_data.py  retrain_with_new_data.py  train_model.py
src/api/: main.py
src/core/: config.py  logging.py
src/data/: load_data.py  preprocess.py
src/models/: model_loader.py  predict.py  train.py
src/monitoring/: __init__.py  data_generator.py  data_logger.py  drift_detector.py  github_integration.py
tests/: conftest.py  test_api.py  test_data.py  test_model.py  test_monitoring_api.py  test_monitoring_data_generator.py  test_monitoring_data_logger.py  test_monitoring_drift_detector.py
(+8 files in other folders)
